2013-05-25  Richard Sandiford  <rdsandiford@googlemail.com>

	PR target/53916
	* config/mips/constraints.md (kl): New constraint.
	* config/mips/mips.md (divmod<mode>4, udivmod<mode>4): Delete.
	(divmod<mode>4_internal): Rename to divmod<mode>4.  Use "kl" as the
	constraint for operand 0.  Split after CSE for MIPS16.  Emit a move
	from LO for MIPS16.
	(udivmod<mode>4_internal): Likewise udivmod<mode>4.

2013-05-25  Richard Sandiford  <rdsandiford@googlemail.com>

	PR target/55777
	* config/mips/mips.c (mips_can_inline_p): New function.
	(TARGET_CAN_INLINE_P): Define.

2013-05-25  Steven Bosscher  <steven@gcc.gnu.org>

	* sched-int.h (ds_t, dw_t): Make unsigned int.
	Fix documentation that describes how all the ds_t bits are used.
	Reserve the last bit for delayed-branch scheduling.
	(BITS_PER_DEP_STATUS): Move to ds_t typedef.
	(BITS_PER_DEP_WEAK): Fix definition and documentation.
	(gen_dep_weak_1): Remove prototype.
	* sched-deps.c (get_dep_weak_1): Make static.
	* target.def (speculate_insn, needs_block_p, gen_spec_check,
	get_insn_spec_ds, get_insn_checked_ds): Adjust hook prototypes.
	* doc/tm.texi: Regenerate.
	* config/ia64/ia64.c (ia64_needs_block_p): Update prototype.

2013-05-24  Steven Bosscher  <steven@gcc.gnu.org>

	PR debug/56950
	* haifa-sched.c (sched_extend_bb): Ignore DEBUG_INSNs.

2013-05-24  Nathan Sidwell  <nathan@codesourcery.com>
	    Sandra Loosemore  <sandra@codesourcery.com>

	* config.gcc (powerpc-*): Allow native for with-cpu.

2013-05-24  Jeff Law  <law@redhat.com>

	PR tree-optimization/57124
	* tree-vrp.c (simplify_cond_using_ranges): Only simplify a
	conversion feeding a condition if the range has an overflow
	if -fstrict-overflow.  Add warnings for when we do make the
	transformation.

2013-05-24  Dehao Chen  <dehao@google.com>

	* gcc/tree-cfg.c (locus_discrim_map): Fix the typo.
	(locus_discrim_hasher): Likewise.
	(locus_discrim_hasher::hash): Likewise.
	(locus_discrim_hasher::equal): Likewise.
