@@ -1,5 +1,9 @@
 2013-05-25  Richard Sandiford  <rdsandiford@googlemail.com>
 
+	* config/mips/mips.h: Use #elif in preprocessor conditions.
+
+2013-05-25  Richard Sandiford  <rdsandiford@googlemail.com>
+
 	PR target/53916
 	* config/mips/constraints.md (kl): New constraint.
 	* config/mips/mips.md (divmod<mode>4, udivmod<mode>4): Delete.
